--- a/src/webapp/views/index.html
+++ b/src/webapp/views/index.html
@@ -12,7 +12,7 @@
 
 	<body>
 		<div id="app" class="g-app"></div>
-		<script type="text/javascript" src="/lib/vendor.js"></script>
+		<script type="text/javascript" src="/lib/vendor.js?_=<%= G.time %>"></script>
 		<script type="text/javascript" src="/dist/<%= G.dist %>/main.js?_=<%= G.time %>"></script>
 	</body>
 </html>
